[package]
name = "vydex-escrow"
version = "0.1.0"
description = "Vydex escrow — one isolated PDA vault per deal, USDC on Solana"
edition = "2021"
license = "MIT"
# Solana 1.18 platform-tools rustc; drives the MSRV-aware resolver (see
# .cargo/config.toml) so transitive deps stay edition-2021 and parseable.
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "vydex_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# NOTE: init-if-needed is intentionally NOT enabled — the program relies on
# `init` (not init_if_needed) as a re-initialization guard. Do not add it.
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# Only the classic SPL Token program is used. Dropping anchor-spl's default
# features (token-2022, metadata, …) keeps the dep tree small and off the newer
# edition-2024 crypto crates that Solana 1.18's platform-tools can't build.
anchor-spl = { version = "0.30.1", default-features = false, features = ["token"] }
